--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,16 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="897. increasing-order-search-tree.cpp" />
-    <ClCompile Include="898. bitwise-ors-of-subarrays.cpp" />
-    <ClCompile Include="899. orderly-queue.cpp" />
-    <ClCompile Include="900. rle-iterator.cpp" />
-    <ClCompile Include="901. online-stock-span.cpp" />
-    <ClCompile Include="902. numbers-at-most-n-given-digit-set.cpp" />
-    <ClCompile Include="904. fruit-into-baskets.cpp" />
-    <ClCompile Include="905. sort-array-by-parity.cpp" />
-    <ClCompile Include="907. sum-of-subarray-minimums.cpp" />
-    <ClCompile Include="896. monotonic-array.cpp" />
+    <ClCompile Include="892. surface-area-of-3d-shapes.cpp" />
+    <ClCompile Include="893. groups-of-special-equivalent-strings.cpp" />
+    <ClCompile Include="894. all-possible-full-binary-trees.cpp" />
+    <ClCompile Include="895. maximum-frequency-stack.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
