--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,9 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="876. middle-of-the-linked-list.cpp" />
-    <ClCompile Include="877. stone-game.cpp" />
-    <ClCompile Include="878. nth-magical-number.cpp" />
+    <ClCompile Include="872. leaf-similar-trees.cpp" />
+    <ClCompile Include="873. length-of-longest-fibonacci-subsequence.cpp" />
+    <ClCompile Include="874. walking-robot-simulation.cpp" />
+    <ClCompile Include="875. koko-eating-bananas.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
