--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,17 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1122. relative-sort-array.cpp" />
-    <ClCompile Include="1123. lowest-common-ancestor-of-deepest-leaves.cpp" />
-    <ClCompile Include="1124. longest-well-performing-interval.cpp" />
-    <ClCompile Include="1128. number-of-equivalent-domino-pairs.cpp" />
-    <ClCompile Include="1129. shortest-path-with-alternating-colors.cpp" />
-    <ClCompile Include="1130. minimum-cost-tree-from-leaf-values.cpp" />
-    <ClCompile Include="1131. maximum-of-absolute-value-expression.cpp" />
-    <ClCompile Include="1137. n-th-tribonacci-number.cpp" />
-    <ClCompile Include="1138. alphabet-board-path.cpp" />
-    <ClCompile Include="1139. largest-1-bordered-square.cpp" />
-    <ClCompile Include="1140. stone-game-ii.cpp" />
+    <ClCompile Include="836. rectangle-overlap.cpp" />
+    <ClCompile Include="837. new-21-game.cpp" />
+    <ClCompile Include="838. push-dominoes.cpp" />
+    <ClCompile Include="839. similar-string-groups.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
