--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,14 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="824. goat-latin.cpp" />
-    <ClCompile Include="825. friends-of-appropriate-ages.cpp" />
-    <ClCompile Include="826. most-profit-assigning-work.cpp" />
-    <ClCompile Include="827. making-a-large-island.cpp" />
-    <ClCompile Include="828. unique-letter-string.cpp" />
-    <ClCompile Include="829. consecutive-numbers-sum.cpp" />
-    <ClCompile Include="830. positions-of-large-groups.cpp" />
-    <ClCompile Include="831. masking-personal-information.cpp" />
+    <ClCompile Include="820. short-encoding-of-words.cpp" />
+    <ClCompile Include="821. shortest-distance-to-a-character.cpp" />
+    <ClCompile Include="822. card-flipping-game.cpp" />
+    <ClCompile Include="823. binary-trees-with-factors.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
