--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,28 +65,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="830. positions-of-large-groups.cpp">
+    <ClCompile Include="821. shortest-distance-to-a-character.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="831. masking-personal-information.cpp">
+    <ClCompile Include="822. card-flipping-game.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="829. consecutive-numbers-sum.cpp">
+    <ClCompile Include="820. short-encoding-of-words.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="828. unique-letter-string.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="824. goat-latin.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="825. friends-of-appropriate-ages.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="826. most-profit-assigning-work.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="827. making-a-large-island.cpp">
+    <ClCompile Include="823. binary-trees-with-factors.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
