--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,16 +65,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="821. shortest-distance-to-a-character.cpp">
+    <ClCompile Include="819. most-common-word.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="822. card-flipping-game.cpp">
+    <ClCompile Include="817. linked-list-components.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="820. short-encoding-of-words.cpp">
+    <ClCompile Include="816. ambiguous-coordinates.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="823. binary-trees-with-factors.cpp">
+    <ClCompile Include="818. race-car.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
