--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,16 +65,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="819. most-common-word.cpp">
+    <ClCompile Include="812. largest-triangle-area.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="817. linked-list-components.cpp">
+    <ClCompile Include="814. binary-tree-pruning.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="816. ambiguous-coordinates.cpp">
+    <ClCompile Include="813. largest-sum-of-averages.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="818. race-car.cpp">
+    <ClCompile Include="815. bus-routes.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
