--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,16 +65,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="812. largest-triangle-area.cpp">
+    <ClCompile Include="811. subdomain-visit-count.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="814. binary-tree-pruning.cpp">
+    <ClCompile Include="809. expressive-words.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="813. largest-sum-of-averages.cpp">
+    <ClCompile Include="808. soup-servings.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="815. bus-routes.cpp">
+    <ClCompile Include="810. chalkboard-xor-game.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
