--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="796. rotate-string.cpp" />
-    <ClCompile Include="797. all-paths-from-source-to-target.cpp" />
-    <ClCompile Include="798. smallest-rotation-with-highest-score.cpp" />
-    <ClCompile Include="799. champagne-tower.cpp" />
+    <ClCompile Include="792. number-of-matching-subsequences.cpp" />
+    <ClCompile Include="793. preimage-size-of-factorial-zeroes-function.cpp" />
+    <ClCompile Include="794. valid-tic-tac-toe-state.cpp" />
+    <ClCompile Include="795. number-of-subarrays-with-bounded-maximum.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
