--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="792. number-of-matching-subsequences.cpp" />
-    <ClCompile Include="793. preimage-size-of-factorial-zeroes-function.cpp" />
-    <ClCompile Include="794. valid-tic-tac-toe-state.cpp" />
-    <ClCompile Include="795. number-of-subarrays-with-bounded-maximum.cpp" />
+    <ClCompile Include="788. rotated-digits.cpp" />
+    <ClCompile Include="789. escape-the-ghosts.cpp" />
+    <ClCompile Include="790. domino-and-tromino-tiling.cpp" />
+    <ClCompile Include="791. custom-sort-string.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
