--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="788. rotated-digits.cpp" />
-    <ClCompile Include="789. escape-the-ghosts.cpp" />
-    <ClCompile Include="790. domino-and-tromino-tiling.cpp" />
-    <ClCompile Include="791. custom-sort-string.cpp" />
+    <ClCompile Include="784. letter-case-permutation.cpp" />
+    <ClCompile Include="785. is-graph-bipartite.cpp" />
+    <ClCompile Include="786. k-th-smallest-prime-fraction.cpp" />
+    <ClCompile Include="787. cheapest-flights-within-k-stops.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
